# nextier-signal-engine-core

./: .gitignore  .windsurfrules  ARCHITECTURE.md  AUTOMATED_SCRAPING_IMPLEMENTATION.md  CLIMATE_CONFLICT_IMPLEMENTATION.md  DEMO_QUICK_START.md  DEMO_SYSTEM_DESIGN.md  DEMO_TWO_STEP.md  FIX.md  Makefile  README.md  SCRIPTS_OVERVIEW.md  SYSTEM_DESIGN.md  complete-test.sh  cors-test.sh  demo-prep.sh  demo-run.sh  demo-start.sh  docker-compose-test.yml  docker-compose.yml  health-check.py  improvement-implementation-prompt.md  init-mongo.js  init-rabbitmq.sh  package-lock.json  pyproject.toml  pytest.ini  requirements-test.txt  sample-data.js  setup.py  start-dev.sh  start-services.sh  test-services.sh  ui-test.sh
.ai/: README.md
.beads/: acled_methodology_bead.jsonl  bead_tracking_system.jsonl  contextual_retrieval_config.jsonl  fatality_audit_config.jsonl  nnvcd_conflict_analysis_engine.jsonl  normalization_rules.jsonl  output_formatter_config.jsonl  pattern_identification_config.jsonl  pattern_matcher_tool.jsonl  rag_integration_config.jsonl  rag_vector_db_config.jsonl  vectorization_process.jsonl
data/: automation_logs.json  mining_zones.geojson  nigeria_econ.csv  nigeria_econ_indicators.csv  parsed_events.json  raw_news.json
data-test/: parsed_events.json  raw_news.json
intelligence-api/: Dockerfile  SENTIMENT_HATE_SPEECH_IMPLEMENTATION.md  __init__.py  entrypoint.sh  health_app.py  main.py  main_fixed.py  main_old.py  main_working.py  requirements.txt  setup.py
intelligence-api-test/: main.py  requirements.txt
intelligence_api/: Dockerfile  intelligence-api  (+2 more)
(+167 files in other folders)
